sources/template-service/b-service/b-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: b-svc
  namespace: template-ns
spec:
  type: NodePort
  selector:
    app: b
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
